--- a/src/components/ContactForm.css
+++ b/src/components/ContactForm.css
@@ -11,13 +11,15 @@
 }
 
 .contact-form button {
+  width: 90px;
   padding: 0.8rem;
-  background: radial-gradient(circle, #5fb4ff, #32408b);
+  background: #0054ab;
   color: white;
-  border: none;
+  border: 1px solid white;
+  border-radius: 9%;
   transition: background-color 0.3s ease, transform 0.3s ease;
 }
 .contact-form button:hover {
   background-color: #2980b9;
-  transform: scale(1.01);
+  transform: scale(1.05);
 }
