--- a/src/components/HomePage.css
+++ b/src/components/HomePage.css
@@ -1,13 +1,60 @@
-
-h1 {
+.left-section h1 {
   font-family: "Quicksand", sans-serif;
   text-align: center;
   margin-top: 60px;
   font-size: 50px;
+  color: aliceblue;
 }
-h2 {
+.left-section h2 {
   font-family: "Quicksand", sans-serif;
   text-align: center;
   margin-top: 60px;
+  color: aliceblue;
 }
 
+.container {
+  display: flex;
+  height: 78.3vh;
+}
+
+.left-section {
+  flex: 2;
+  display: block;
+  justify-content: center;
+  align-items: center;
+}
+.right-section {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #ebeaea;
+}
+
+.login-form {
+  max-width: 300px;
+  width: 100%;
+}
+
+.login-form input {
+  margin-bottom: 10px;
+  padding: 10px;
+  font-size: 16px;
+  width: 100%;
+}
+
+.login-form button {
+  width: 90px;
+  padding: 0.8rem;
+  background: #0054ab;
+  color: white;
+  border: 1px solid white;
+  border-radius: 9%;
+  transition: background-color 0.3s ease, transform 0.3s ease;
+  margin-right: 20px;
+}
+
+.login-form button:hover {
+  background-color: #2980b9;
+  transform: scale(1.05);
+}
