--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,6 +1,6 @@
 .footer {
   background: linear-gradient(to right, #05165b, #3c79d8);
-  padding: 0 1rem 1rem 1rem;
+  padding-bottom: 1rem;
   text-align: center;
   border-top: 1px solid #000000;
 }
