--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,4 +1,4 @@
-.footer {
+.footer-bg {
   background: linear-gradient(to right, #05165b, #3c79d8);
   padding-bottom: 1rem;
   text-align: center;
@@ -10,16 +10,16 @@
   margin: 0 auto;
 }
 
-.footer-nav {
+.footer-link {
   margin-top: 0.5rem;
 }
 
-.footer-nav a {
+.footer-link a {
   color: #000000;
   text-decoration: none;
   margin: 0 1rem;
 }
 
-.footer-nav a:hover {
+.footer-link a:hover {
   text-decoration: underline;
 }
